--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
                   autoplay
                   preload="auto"
                   >
-                       <source src="../video/video-arquimobi.mp4" type="video/mp4">
+                       <source src="../video/video-arquimobi-ok.mp4" type="video/mp4">
                         Navegador Nao Suporta esse Video.  
                 </video>
 
